--- a/local_dev/roles/apache/templates/httpd.conf.j2
+++ b/local_dev/roles/apache/templates/httpd.conf.j2
@@ -133,7 +133,7 @@ MaxRequestsPerChild  0
 # prevent Apache from glomming onto all bound IP addresses (0.0.0.0)
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen {{ apache_port }}
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -1007,3 +1007,5 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    ErrorLog logs/dummy-host.example.com-error_log
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
+
+ServerTokens ProductOnly
