--- a/local_dev/roles/trafficserver/templates/records.config.j2
+++ b/local_dev/roles/trafficserver/templates/records.config.j2
@@ -22,7 +22,7 @@ CONFIG proxy.config.exec_thread.affinity INT 0
 # Specify server addresses and ports to bind for HTTP and HTTPS. Docs:
 #    https://docs.trafficserver.apache.org/records.config#proxy-config-http-server-ports
 ##############################################################################
-CONFIG proxy.config.http.server_ports STRING 8080
+CONFIG proxy.config.http.server_ports STRING {{ trafficserver_port }}
 
 ##############################################################################
 # Via: headers. Docs:
@@ -156,7 +156,7 @@ CONFIG proxy.config.log.auto_delete_rolled_files INT 1
 ##############################################################################
 CONFIG proxy.config.url_remap.remap_required INT 1
     # https://docs.trafficserver.apache.org/records.config#proxy-config-url-remap-pristine-host-hdr
-CONFIG proxy.config.url_remap.pristine_host_hdr INT 0
+CONFIG proxy.config.url_remap.pristine_host_hdr INT {{ trafficserver_retain_host_header }}
     # https://docs.trafficserver.apache.org/records.config#reverse-proxy
 CONFIG proxy.config.reverse_proxy.enabled INT 1
 
