--- a/local_dev/roles/trafficserver/templates/storage.config.j2
+++ b/local_dev/roles/trafficserver/templates/storage.config.j2
@@ -47,4 +47,7 @@
 # A small default cache (256MB). This is set to allow for the regression test to succeed
 # most likely you'll want to use a larger cache. And, we definitely recommend the use
 # of raw devices for production caches.
-/var/cache/trafficserver 256M
+# /var/cache/trafficserver 256M
+{% for config in trafficserver_storage_configs %}
+{{ config }}
+{% endfor %}
