Use stats over http plugin with a random path info

--- a/local_dev/roles/trafficserver/templates/plugin.config.j2
+++ b/local_dev/roles/trafficserver/templates/plugin.config.j2
@@ -7,3 +7,4 @@
 #inktomi/iwx/iwx.so
 #inktomi/abuse/abuse.so etc/trafficserver/abuse.config
 #inktomi/icx/icx.so etc/trafficserver/icx.config
+stats_over_http.so {{ trafficserver_stats_over_http_pathinfo }}
