Enable the cache inspector utility

--- a/local_dev/roles/trafficserver/templates/records.config.j2
+++ b/local_dev/roles/trafficserver/templates/records.config.j2
@@ -206,3 +206,9 @@ CONFIG proxy.config.cluster.cluster_port INT 8086
 CONFIG proxy.config.cluster.rsport INT 8088
 CONFIG proxy.config.cluster.mcport INT 8089
 CONFIG proxy.config.cluster.mc_group_addr STRING 224.0.1.37
+
+##############################################################################
+# Cache Inspector Utility. Docs:
+#    http://trafficserver.readthedocs.org/en/latest/admin-guide/storage/index.en.html#accessing-the-cache-inspector-utility
+##############################################################################
+CONFIG proxy.config.http_ui_enabled INT 1
