Add mappings for http UI endpoints

--- a/local_dev/roles/trafficserver/templates/records.config.j2
+++ b/local_dev/roles/trafficserver/templates/records.config.j2
@@ -210,5 +210,8 @@ CONFIG proxy.config.cluster.mc_group_addr STRING 224.0.1.37
 ##############################################################################
 # Cache Inspector Utility. Docs:
 #    http://trafficserver.readthedocs.org/en/latest/admin-guide/storage/index.en.html#accessing-the-cache-inspector-utility
+#    http://trafficserver.readthedocs.org/en/latest/admin-guide/files/records.config.en.html?highlight=proxy.config.http.enable_http_info#proxy-config-http-ui-enabled
+#    http://trafficserver.readthedocs.org/en/latest/admin-guide/files/records.config.en.html?highlight=proxy.config.http.enable_http_info#proxy-config-http-enable-http-info
 ##############################################################################
 CONFIG proxy.config.http_ui_enabled INT 3
+CONFIG proxy.config.http.enable_http_info INT 1
