Fix a typo: forma -> format

--- a/local_dev/roles/trafficserver/templates/records.config.j2
+++ b/local_dev/roles/trafficserver/templates/records.config.j2
@@ -149,7 +149,7 @@ CONFIG proxy.config.log.rolling_interval_sec INT 86400
 CONFIG proxy.config.log.rolling_size_mb INT 10
 CONFIG proxy.config.log.auto_delete_rolled_files INT 1
 
-# Use the Netscape Extended-2 forma
+# Use the Netscape Extended-2 format
 #   http://trafficserver.readthedocs.org/en/5.3.x/admin/working-log-files.en.html
 CONFIG proxy.config.log.extended2_log_enabled INT 1
 CONFIG proxy.config.log.extended2_log_is_ascii INT 1
