Hide the server version in Server and Via response headers

--- a/local_dev/roles/trafficserver/templates/records.config.j2
+++ b/local_dev/roles/trafficserver/templates/records.config.j2
@@ -215,3 +215,9 @@ CONFIG proxy.config.cluster.mc_group_addr STRING 224.0.1.37
 ##############################################################################
 CONFIG proxy.config.http_ui_enabled INT 3
 CONFIG proxy.config.http.enable_http_info INT 1
+
+
+# Hide the server version in Server and Via response headers
+CONFIG proxy.config.http.request_via_str STRING ApacheTrafficServer
+CONFIG proxy.config.http.response_via_str STRING ApacheTrafficServer
+CONFIG proxy.config.http.response_server_str STRING ATS
