Enable healthcheck plugin

--- a/local_dev/roles/trafficserver/templates/plugin.config.j2
+++ b/local_dev/roles/trafficserver/templates/plugin.config.j2
@@ -8,3 +8,4 @@
 #inktomi/abuse/abuse.so etc/trafficserver/abuse.config
 #inktomi/icx/icx.so etc/trafficserver/icx.config
 stats_over_http.so {{ trafficserver_stats_over_http_pathinfo }}
+healthchecks.so /etc/trafficserver/healthcheck.config
